[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ukbraptools"
version = "0.2.0"
description = "Updated utilities for UK Biobank Research Analysis Platform (DNAnexus RAP)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Chenjie Zeng", email = "chenjie.zeng@nih.gov"},
]
keywords = ["ukbiobank", "dnanexus", "rap", "biobank", "phenotype", "genomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# All runtime deps are pre-installed on UKB RAP; polars must be installed
# manually on RAP: pip install polars --break-system-packages
dependencies = ["polars>=0.20"]

[project.optional-dependencies]
# Install these if developing outside of UKB RAP
dev = ["dxpy", "pyspark", "polars"]

[project.urls]
Repository = "https://github.com/zengchenjie/ukbraptools"
"Original ukbutils" = "https://github.com/nhgritctran/ukbutils"
"UKB RAP Docs" = "https://dnanexus.gitbook.io/uk-biobank-rap/"

[tool.setuptools.packages.find]
include = ["ukbraptools*"]
